fix(searchbar): align surface on select

--- a/packages/stencil/components/search-bar/src/components/osds-search-bar/osds-search-bar.scss
+++ b/packages/stencil/components/search-bar/src/components/osds-search-bar/osds-search-bar.scss
@@ -11,7 +11,6 @@
   osds-select {
     --ods-size-select-border-radius-bottom-right: 0;
     --ods-size-select-border-radius-top-right: 0;
-    --ods-size-select-border-right-width: 0;
   }
 
   .first {
@@ -25,6 +24,7 @@
 
   osds-input:not(.first) {
     border-radius: 0;
+    border-left-width: 0;
   }
 
   osds-button {
